--- a/MavenProject/pom.xml
+++ b/MavenProject/pom.xml
@@ -15,22 +15,45 @@
   </properties>
 
   <dependencies>
-  <dependency>
+  	<dependency>
         <groupId>org.seleniumhq.selenium</groupId>
         <artifactId>selenium-java</artifactId>
         <version>3.4.0</version>
     </dependency> 
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>compile</scope>
+      	<groupId>junit</groupId>
+      	<artifactId>junit</artifactId>
+     	 <version>3.8.1</version>
+     	 <scope>compile</scope>
     </dependency>
     <dependency>
-    <groupId>org.testng</groupId>
-    <artifactId>testng</artifactId>
-    <version>6.11</version>
-</dependency>
+    	<groupId>org.testng</groupId>
+    	<artifactId>testng</artifactId>
+    	<version>6.11</version>
+	</dependency>
+    <dependency>
+    	<groupId>org.apache.poi</groupId>
+    	<artifactId>poi</artifactId>
+   	 	<version>3.17-beta1</version>
+	</dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+	<dependency>
+  	  	<groupId>org.apache.poi</groupId>
+   		<artifactId>poi-ooxml</artifactId>
+  	  	<version>3.17-beta1</version>
+	</dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-scratchpad -->
+	<dependency>
+    	<groupId>org.apache.poi</groupId>
+    	<artifactId>poi-scratchpad</artifactId>
+    	<version>3.17-beta1</version>
+	</dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-schemas -->
+	<dependency>
+   	 	<groupId>org.apache.poi</groupId>
+   	 	<artifactId>poi-ooxml-schemas</artifactId>
+    	<version>3.17-beta1</version>
+	</dependency>
     
   </dependencies>
 </project>
